module(
    name = "lobster",
    compatibility_level = 1,
    version = "0.0.0",
)


bazel_dep(
    name = "rules_python",
    version = "0.31.0",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

python.toolchain(
    is_default = True,
    python_version = "3.11",
)

use_repo(python, "python_versions")

bazel_dep(name = "googletest", version = "1.13.0")